# jeopardy

./: .gitignore  Makefile  README.md  answer.cpp  answer.h  answer.ui  answer_qt5.ui  answer_qt6.ui  doublejeopardy.cpp  editor.cpp  gamefield.cpp  gamefield.h  jeopardy.cpp  jeopardy.h  jeopardy.pro  main.cpp  meson.build  meson_options.txt  podium.cpp  podium.h  ui_answer.h  ui_dialog.h  ui_doublejeopardy.h  ui_editor.h  ui_gamefield.h  ui_jeopardy.h  ui_podium.h
answers/: 1.jrf
